- Overall library version set to 1.4.1 - Hibernate upgraded to 4.2.0.Final - Spring upgraded to 3.2.2.RELEASE - ZKoss upgraded to 6.5.2 - DAO.reattach - change of implementation if entity is already in the persistence context - DLBinder updated to new ZK implementations - SelectorUtils - error of Wire and compose order

--- a/HibernateDAO/pom.xml
+++ b/HibernateDAO/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <artifactId>zk-dl</artifactId>
         <groupId>cz.datalite.zk-dl</groupId>
-        <version>1.4.0</version>
+        <version>1.4.1</version>
     </parent>
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>HibernateDAO</artifactId>
     <packaging>jar</packaging>
-    <version>1.4.0</version>
+    <version>1.4.1</version>
     <name>Hibernate DAO</name>
     <description>Yet another Hibernate DAO, what is unique is support of our data driven components. With this DAO, you can bind components like listbox to the database with 10 lines of code :).</description>
 
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>4.0.2.GA</version>
+            <version>4.3.1.Final</version>
         </dependency>
     
         <dependency>
