--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>zk-dl</artifactId>
-    <version>1.4.0</version>
+    <version>1.4.1</version>
     <packaging>pom</packaging>
     <name>DataLite ZKoss framework extension library</name>
     <description>
@@ -43,11 +43,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <netbeans.hint.license>LGPL</netbeans.hint.license>
-        <org.zkframework.version>6.5.0</org.zkframework.version>
-        <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
-        <org.hibernateframework.version>3.5.0-Final</org.hibernateframework.version>
-        <cz.datalite.zk-dl.version>1.4.0</cz.datalite.zk-dl.version>
-        <org.slf4j.version>1.6.6</org.slf4j.version>
+        <org.zkframework.version>6.5.2</org.zkframework.version>
+        <org.springframework.version>3.2.2.RELEASE</org.springframework.version>
+        <org.hibernateframework.version>4.2.0.Final</org.hibernateframework.version>
+        <cz.datalite.zk-dl.version>1.4.1</cz.datalite.zk-dl.version>
+        <org.slf4j.version>1.7.3</org.slf4j.version>
     </properties>
 
     <profiles>
@@ -85,7 +85,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>2.1.2</version>
+                        <version>2.2.1</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
@@ -99,7 +99,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.8.1</version>
+                        <version>2.9</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -121,7 +121,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.0</version>
                 <configuration>
                     <source>1.5</source>
                     <target>1.5</target>
@@ -131,7 +131,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.5</version>
+                <version>2.6</version>
                 <configuration>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
@@ -140,7 +140,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.2.2</version>
+                <version>2.4.1</version>
                 <configuration>
                     <tagBase>https://svn.apache.org/repos/asf/maven/components/releases</tagBase>
                 </configuration>
