--- a/ZKDLComponents/pom.xml
+++ b/ZKDLComponents/pom.xml
@@ -81,5 +81,13 @@
             </exclusions>
         </dependency>
 
+        <!-- Test libraries / JUnit, Spring Test for unit test and Selenium/WebDriver
+                for integration tests -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
