--- a/ZKDLComponents/pom.xml
+++ b/ZKDLComponents/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>ZKDLComponents</artifactId>
-    <version>1.4.1.2</version>
+    <version>1.4.1.3-IKONKY</version>
     <name>ZKDLComponents</name>
     <description>Data driven components with UI controlls - listbox, lovbox, combobox.</description>
 
