Major rewrite of DL components - created widget (javascript) classes and moved to standard component development.

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -58,6 +58,7 @@ listbox.exportManager.fileName=File name
 listbox.exportManager.wait=Please wait ...
 
 listbox.paging.noData=No data available
+listbox.paging.outOfRange=Selected page is out of range...
 
 listbox.manager.reset.message.title=Reset all
 listbox.manager.reset.message.text=Please confirm reset of all settings.
