ZISWEB-440 - New annotation @ZkRole - handle access rights

--- a/ZKComposer/src/main/resources/metainfo/i3-label.properties
+++ b/ZKComposer/src/main/resources/metainfo/i3-label.properties
@@ -1,4 +1,6 @@
 zkcomposer.cancel=Cancel
 zkcomposer.bePatient=This operation can take long. Please be patient.
+zkcomposer.accessDenied.title=Access denied
+zkcomposer.accessDenied.message=You do not have required permissions to execute this operation.
 zkcomposer.detail.opened.title=Already opened
 zkcomposer.detail.opened.message=Detail window is already opened
