Java version set to 1.6 DL Profile manager component (snapshot version)

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -62,3 +62,8 @@ listbox.manager.reset.message.title=Reset all
 listbox.manager.reset.message.text=Please confirm reset of all settings.
 listbox.manager.resetFilter.message.title=Reset filters
 listbox.manager.resetFilter.message.text=Please confirm reset of all filters.
+
+listbox.profileManager.load=Load
+listbox.profileManager.load.tooltip=Load profile
+listbox.profileManager.save=Save
+listbox.profileManager.save.tooltip=Save profile
