--- a/pom.xml
+++ b/pom.xml
@@ -41,13 +41,14 @@
 
      <!-- Shared version number properties -->
     <properties>
+    	<java-version>1.6</java-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <netbeans.hint.license>LGPL</netbeans.hint.license>
         <org.zkframework.version>6.5.2</org.zkframework.version>
-        <org.springframework.version>3.2.2.RELEASE</org.springframework.version>
+        <org.springframework.version>3.2.3.RELEASE</org.springframework.version>
         <org.hibernateframework.version>4.2.0.Final</org.hibernateframework.version>
         <cz.datalite.zk-dl.version>1.4.1</cz.datalite.zk-dl.version>
-        <org.slf4j.version>1.7.3</org.slf4j.version>
+        <org.slf4j.version>1.7.5</org.slf4j.version>
     </properties>
 
     <profiles>
@@ -123,8 +124,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.0</version>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>${java-version}</source>
+                    <target>${java-version}</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
