DLListbox profile edit

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -64,6 +64,15 @@ listbox.manager.resetFilter.message.title=Reset filters
 listbox.manager.resetFilter.message.text=Please confirm reset of all filters.
 
 listbox.profileManager.load=Load
-listbox.profileManager.load.tooltip=Load profile
+listbox.profileManager.load.tooltip=Load agenda settings from profile
 listbox.profileManager.save=Save
-listbox.profileManager.save.tooltip=Save profile
+listbox.profileManager.save.tooltip=Save agenda settings to profile
+listbox.profileManager.edit=Edit
+listbox.profileManager.edit.tooltip=Edit profile
+listbox.profileManager.create=Create
+listbox.profileManager.create.tooltip=Save agenda settings to new profile
+listbox.profileManager.delete=Delete
+listbox.profileManager.delete.tooltip=Delete profile
+listbox.profileManager.profile.name=Profile name
+listbox.profileManager.profile.public=Public profile
+listbox.profileManager.profile.default=Default profile
