DLListbox profile (RC version)

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -69,10 +69,12 @@ listbox.profileManager.save=Save
 listbox.profileManager.save.tooltip=Save agenda settings to profile
 listbox.profileManager.edit=Edit
 listbox.profileManager.edit.tooltip=Edit profile
-listbox.profileManager.create=Create
+listbox.profileManager.create=Create profile
 listbox.profileManager.create.tooltip=Save agenda settings to new profile
 listbox.profileManager.delete=Delete
 listbox.profileManager.delete.tooltip=Delete profile
+listbox.profileManager.delete.confirm=Do you really want to delete profile {0}?
 listbox.profileManager.profile.name=Profile name
 listbox.profileManager.profile.public=Public profile
 listbox.profileManager.profile.default=Default profile
+listbox.profileManager.profile.saveAgendaSettings=Save current agenda settings
