New dlprofilemanager zul arguments, improved profile edit window

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -75,6 +75,9 @@ listbox.profileManager.delete=Delete
 listbox.profileManager.delete.tooltip=Delete profile
 listbox.profileManager.delete.confirm=Do you really want to delete profile {0}?
 listbox.profileManager.profile.name=Profile name
+listbox.profileManager.profile.type=Typ profilu
 listbox.profileManager.profile.public=Public profile
+listbox.profileManager.profile.private=Private profile
 listbox.profileManager.profile.default=Default profile
-listbox.profileManager.profile.saveAgendaSettings=Save current agenda settings
+listbox.profileManager.profile.saveColumnModel=Save current column settings
+listbox.profileManager.profile.saveFilterModel=Save current filter settings
