--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -76,8 +76,10 @@ listbox.profileManager.delete.tooltip=Delete profile
 listbox.profileManager.delete.confirm=Do you really want to delete profile {0}?
 listbox.profileManager.profile.name=Profile name
 listbox.profileManager.profile.type=Typ profilu
-listbox.profileManager.profile.public=Public profile
-listbox.profileManager.profile.private=Private profile
+listbox.profileManager.profile.public=Common profile
+listbox.profileManager.profile.private=Personal profile
 listbox.profileManager.profile.default=Default profile
 listbox.profileManager.profile.saveColumnModel=Save current column settings
 listbox.profileManager.profile.saveFilterModel=Save current filter settings
+listbox.profileManager.profile.short.public=C
+listbox.profileManager.profile.short.private=P
