Major change in DLSearch.addAlias() implementation and API cleanup. See javadoc DLSearch.addAlias, DLSearch.addAliases, DLSearch.addFetches javadoc Version updated to ZK-DL 4.1.3.

--- a/HibernateDAO/pom.xml
+++ b/HibernateDAO/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <artifactId>zk-dl</artifactId>
         <groupId>cz.datalite.zk-dl</groupId>
-        <version>1.4.1</version>
+        <version>1.4.3</version>
     </parent>
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>HibernateDAO</artifactId>
     <packaging>jar</packaging>
-    <version>1.4.1.6</version>
+    <version>1.4.3</version>
     <name>Hibernate DAO</name>
     <description>Yet another Hibernate DAO, what is unique is support of our data driven components. With this DAO, you can bind components like listbox to the database with 10 lines of code :).</description>
 
@@ -34,6 +34,12 @@
             <artifactId>DLHelpers</artifactId>
             <version>${cz.datalite.zk-dl.version}</version>
         </dependency>
-    
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
