--- a/DLBind/pom.xml
+++ b/DLBind/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>DLBind</artifactId>
-    <version>1.4.3</version>
+    <version>1.4.3.2</version>
     <name>DLBind</name>
     <description>Binder module provides additional functionality to ZKBind.</description>
     
@@ -22,9 +22,9 @@
         </dependency>
         
         <dependency>
-            <groupId>org.zkoss.zk</groupId>
+            <groupId>cz.datalite.zk-dl</groupId>
             <artifactId>zkplus</artifactId>
-            <version>${org.zkframework.version}</version>
+            <version>${cz.datalite.zk-dl.version}.1</version>
         </dependency>
         
     </dependencies>
