DLLovbox events cleanup:  -  DLLovbox.setSelectedItem() does NOT fire any event   - DLLovboxController.setSelectedItem() does fire onSelect event
 Extended Profile behaviour

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -75,11 +75,13 @@ listbox.profileManager.delete=Delete
 listbox.profileManager.delete.tooltip=Delete profile
 listbox.profileManager.delete.confirm=Do you really want to delete profile {0}?
 listbox.profileManager.profile.name=Profile name
-listbox.profileManager.profile.type=Typ profilu
-listbox.profileManager.profile.public=Common profile
-listbox.profileManager.profile.private=Personal profile
-listbox.profileManager.profile.default=Default profile
+listbox.profileManager.profile.public=Public profile
+listbox.profileManager.profile.private=Private profile
+listbox.profileManager.profile.category=Category
+listbox.profileManager.profile.default=My Default profile
 listbox.profileManager.profile.saveColumnModel=Save current column settings
+listbox.profileManager.profile.saveColumnModel.tooltip=If checked, save into profile current column settings as visible on active page.
 listbox.profileManager.profile.saveFilterModel=Save current filter settings
+listbox.profileManager.profile.saveFilterModel.tooltip=If checked, save into profile current filter settings as visible on active page.
 listbox.profileManager.profile.short.public=C
 listbox.profileManager.profile.short.private=P
