--- a/DLBind/pom.xml
+++ b/DLBind/pom.xml
@@ -4,12 +4,12 @@
     <parent>
         <artifactId>zk-dl</artifactId>
         <groupId>cz.datalite.zk-dl</groupId>
-        <version>1.4.3</version>
+        <version>1.4.4</version>
     </parent>
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>DLBind</artifactId>
-    <version>1.4.3.2</version>
+    <version>1.4.4</version>
     <name>DLBind</name>
     <description>Binder module provides additional functionality to ZKBind.</description>
     
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>cz.datalite.zk-dl</groupId>
             <artifactId>zkplus</artifactId>
-            <version>${cz.datalite.zk-dl.version}.1</version>
+            <version>${cz.datalite.zk-dl.version}</version>
         </dependency>
         
     </dependencies>
