--- a/ZKDLTutorial/ToDoDb.properties
+++ b/ZKDLTutorial/ToDoDb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 1.8.0.5
-#Wed Mar 23 10:14:59 CET 2011
+#Tue Jun 18 21:59:56 CEST 2013
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
