Added filter to column and export manager

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -30,6 +30,7 @@ listbox.ok=OK
 listbox.columnManager.title=Column manager
 listbox.columnManager.hidden=Hidden columns
 listbox.columnManager.displayed=Displayed columns
+listbox.columnManager.quickFilter=Filtr
 
 listbox.sortingManager.title=Sorting manager
 listbox.sortingManager.column=Column
