--- a/ZKDLComponentsHibernateExt/pom.xml
+++ b/ZKDLComponentsHibernateExt/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>ZKDLComponentsHibernateExt</artifactId>
-    <version>1.4.4</version>
+    <version>1.4.4.1</version>
     <name>ZKDLComponentsHibernateExt</name>
     <description>The actual interface between ZKComponents and HibernateDAO. It contains mainly DLListboxCriteriaController.</description>
     
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>cz.datalite.zk-dl</groupId>
             <artifactId>ZKDLComponents</artifactId>
-            <version>${cz.datalite.zk-dl.version}</version>
+            <version>${cz.datalite.zk-dl.version}.30</version>
         </dependency>
     </dependencies>
 </project>
