* Merged library "jse" with DLHelpers * New library DLBussiness * Updated all library components to version 1.5

--- a/ZKDLComponentsHibernateExt/pom.xml
+++ b/ZKDLComponentsHibernateExt/pom.xml
@@ -4,12 +4,12 @@
     <parent>
         <artifactId>zk-dl</artifactId>
         <groupId>cz.datalite.zk-dl</groupId>
-        <version>1.4.4</version>
+        <version>1.4.5</version>
     </parent>
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>ZKDLComponentsHibernateExt</artifactId>
-    <version>1.4.4.1</version>
+    <version>1.4.5</version>
     <name>ZKDLComponentsHibernateExt</name>
     <description>The actual interface between ZKComponents and HibernateDAO. It contains mainly DLListboxCriteriaController.</description>
     
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>cz.datalite.zk-dl</groupId>
             <artifactId>ZKDLComponents</artifactId>
-            <version>${cz.datalite.zk-dl.version}.30</version>
+            <version>${cz.datalite.zk-dl.version}</version>
         </dependency>
     </dependencies>
 </project>
