Listbox export manager - migration from jExcelApi library to Apache POI.

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -51,7 +51,7 @@ listbox.filterManager.removeAll=Remove all
 listbox.exportManager.title=Export manager
 listbox.exportManager.hidden=Hidden columns
 listbox.exportManager.displayed=Displayed columns
-listbox.exportManager.recordCount=Number of rows to be export (0 = all, max. 36000)
+listbox.exportManager.recordCount=Number of rows to be export (0 = all, max = {0})
 listbox.exportManager.sheetName=Sheet name
 listbox.exportManager.fileName=File name
 listbox.exportManager.wait=Please wait ...
