Schování popup v QuickFiltru v případě, že v něm je pouze jedna položka Povolení nastavení labelu u quick filtru

--- a/ZKDLComponents/pom.xml
+++ b/ZKDLComponents/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>ZKDLComponents</artifactId>
-    <version>1.4.5.14</version>
+    <version>1.4.5.15</version>
     <name>ZKDLComponents</name>
     <description>Data driven components with UI controlls - listbox, lovbox, combobox.</description>
 
@@ -118,5 +118,22 @@
                 </includes>
             </resource>
         </resources>
+
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.2.1</version>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                            <goals>
+                                <goal>jar</goal>
+                                <goal>test-jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
     </build>
 </project>
