--- a/DLBind/pom.xml
+++ b/DLBind/pom.xml
@@ -2,14 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>zk-dl</artifactId>
         <groupId>cz.datalite.zk-dl</groupId>
-        <version>1.4.5</version>
+        <artifactId>zk-dl</artifactId>
+        <version>1.5.0</version>
     </parent>
 
-    <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>DLBind</artifactId>
-    <version>1.4.5</version>
+    <version>1.5.0</version>
     <name>DLBind</name>
     <description>Binder module provides additional functionality to ZKBind.</description>
     
@@ -18,14 +17,15 @@
         <dependency>
             <groupId>org.zkoss.zk</groupId>
             <artifactId>zkbind</artifactId>
-            <version>6.5.2.2-DATALITE</version>
+            <!--<version>6.5.2.2-DATALITE</version>-->
+            <version>${org.zkframework.version}</version>
         </dependency>
-        
-        <dependency>
-            <groupId>cz.datalite.zk-dl</groupId>
-            <artifactId>zkplus</artifactId>
-            <version>${cz.datalite.zk-dl.version}</version>
-        </dependency>
+        <!-- -->
+        <!--<dependency>-->
+            <!--<groupId>cz.datalite.zk-dl</groupId>-->
+            <!--<artifactId>zkplus</artifactId>-->
+            <!--<version>${cz.datalite.zk-dl.version}</version>-->
+        <!--</dependency>-->
         
     </dependencies>
     
