--- a/SpringService/pom.xml
+++ b/SpringService/pom.xml
@@ -1,120 +1,122 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>zk-dl</artifactId>
-        <groupId>cz.datalite.zk-dl</groupId>
-        <version>1.4.5</version>
-    </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>zk-dl</artifactId>
+		<groupId>cz.datalite.zk-dl</groupId>
+		<version>1.5.0</version>
+	</parent>
 
-    <artifactId>SpringService</artifactId>
-    <version>1.4.5.9</version>
-    <name>SpringService</name>
-    <description>Generic Spring service, which talks to Generic Hibernate DAO. Use for classical 3-layered architecture ZK - Spring - Hibernate.</description>
+	<artifactId>SpringService</artifactId>
+	<version>1.5.0</version>
+	<name>SpringService</name>
+	<description>Generic Spring service, which talks to Generic Hibernate DAO. Use for classical 3-layered architecture
+		ZK - Spring - Hibernate.
+	</description>
 
-    <dependencies>
-        <!--
-            Core utilities used by other modules.
-            Define this if you use Spring Utility APIs (org.springframework.core.*/org.springframework.util.*)
-        -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${org.springframework.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+	<dependencies>
+		<!--
+			Core utilities used by other modules.
+			Define this if you use Spring Utility APIs (org.springframework.core.*/org.springframework.util.*)
+		-->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${org.springframework.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
-        <!--
-            Bean Factory and JavaBeans utilities (depends on spring-core)
-            Define this if you use Spring Bean APIs (org.springframework.beans.*)
-        -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <version>${org.springframework.version}</version>
-        </dependency>
+		<!--
+			Bean Factory and JavaBeans utilities (depends on spring-core)
+			Define this if you use Spring Bean APIs (org.springframework.beans.*)
+		-->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
 
-        <!--
-            Aspect Oriented Programming (AOP) Framework (depends on core, beans)
-            Define this if you use Spring AOP APIs (org.springframework.aop.*)
-        -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aop</artifactId>
-            <version>${org.springframework.version}</version>
-        </dependency>
+		<!--
+			Aspect Oriented Programming (AOP) Framework (depends on core, beans)
+			Define this if you use Spring AOP APIs (org.springframework.aop.*)
+		-->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
 
-        <!--
-            Application Context (depends on core, expression, aop, beans)
-            This is the central artifact for Spring's Dependency Injection Container and is generally always defined
-        -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${org.springframework.version}</version>
-        </dependency>
+		<!--
+			Application Context (depends on core, expression, aop, beans)
+			This is the central artifact for Spring's Dependency Injection Container and is generally always defined
+		-->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
 
-        <!--
-            Object-to-Relation-Mapping (ORM) integration with Hibernate, JPA, and iBatis.
-            (depends on core, beans, context, transaction)
-            Define this if you need ORM (org.springframework.orm.*)
-        -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-orm</artifactId>
-            <version>${org.springframework.version}</version>
-        </dependency>
+		<!--
+			Object-to-Relation-Mapping (ORM) integration with Hibernate, JPA, and iBatis.
+			(depends on core, beans, context, transaction)
+			Define this if you need ORM (org.springframework.orm.*)
+		-->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
 
 
+		<dependency>
+			<groupId>cz.datalite.zk-dl</groupId>
+			<artifactId>DLHelpers</artifactId>
+			<version>${cz.datalite.zk-dl.version}</version>
+		</dependency>
 
-        <dependency>
-            <groupId>cz.datalite.zk-dl</groupId>
-            <artifactId>DLHelpers</artifactId>
-            <version>${cz.datalite.zk-dl.version}</version>
-        </dependency>
+		<dependency>
+			<groupId>cz.datalite.zk-dl</groupId>
+			<artifactId>HibernateDAO</artifactId>
+			<version>${cz.datalite.zk-dl.version}</version>
+		</dependency>
 
-        <dependency>
-            <groupId>cz.datalite.zk-dl</groupId>
-            <artifactId>HibernateDAO</artifactId>
-            <version>${cz.datalite.zk-dl.version}</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-            <optional>true</optional>
-        </dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+			<optional>true</optional>
+		</dependency>
 
-        <dependency>
-            <groupId>oracle</groupId>
-            <artifactId>oracle-jdbc</artifactId>
-            <version>10.2.0.4</version>
-            <scope>provided</scope>
-        </dependency>
+		<dependency>
+			<groupId>oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0.4</version>
+			<scope>provided</scope>
+		</dependency>
 
-    </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
