--- a/ZKDLComponentsHibernateExt/pom.xml
+++ b/ZKDLComponentsHibernateExt/pom.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>zk-dl</artifactId>
-        <groupId>cz.datalite.zk-dl</groupId>
-        <version>1.4.5</version>
-    </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>zk-dl</artifactId>
+		<groupId>cz.datalite.zk-dl</groupId>
+		<version>1.5.0</version>
+	</parent>
 
-    <groupId>cz.datalite.zk-dl</groupId>
-    <artifactId>ZKDLComponentsHibernateExt</artifactId>
-    <version>1.4.5</version>
-    <name>ZKDLComponentsHibernateExt</name>
-    <description>The actual interface between ZKComponents and HibernateDAO. It contains mainly DLListboxCriteriaController.</description>
-    
-    <dependencies>
-        <dependency>
-            <groupId>cz.datalite.zk-dl</groupId>
-            <artifactId>HibernateDAO</artifactId>
-            <version>${cz.datalite.zk-dl.version}</version>
-        </dependency>
+	<artifactId>ZKDLComponentsHibernateExt</artifactId>
+	<version>1.5.0</version>
+	<name>ZKDLComponentsHibernateExt</name>
+	<description>The actual interface between ZKComponents and HibernateDAO. It contains mainly
+		DLListboxCriteriaController.
+	</description>
 
-        <dependency>
-            <groupId>cz.datalite.zk-dl</groupId>
-            <artifactId>ZKDLComponents</artifactId>
-            <version>${cz.datalite.zk-dl.version}</version>
-        </dependency>
-    </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>cz.datalite.zk-dl</groupId>
+			<artifactId>HibernateDAO</artifactId>
+			<version>${cz.datalite.zk-dl.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>cz.datalite.zk-dl</groupId>
+			<artifactId>ZKDLComponents</artifactId>
+			<version>${cz.datalite.zk-dl.version}</version>
+		</dependency>
+	</dependencies>
 </project>
